Remove duplicate 'text-align' in main.css (Fixes #19)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3531,7 +3531,6 @@ footer .row {
     text-align: center;
     background: black;
     color: rgba(255, 255, 255, 0.5);
-    text-align: center;
     text-transform: uppercase;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
